# WadoEngine

./: .gitignore  .gitmodules  README.md  compileShaders.ps1  main.cpp
Shaders/Compute/: compute.comp
Shaders/Fragment/: PBRDeferredFirst.frag  PBRDeferredSecond.frag  pbr.frag  triangle.frag
Shaders/Vertex/: PBRDeferredFirst.vert  PBRDeferredSecond.vert  triangle.vert
VulkanTest/: CMakeLists.txt  Makefile  WadoVersion.h.in  main.cpp
VulkanTest/Shaders/Fragment/: triangle.frag
VulkanTest/Shaders/Vertex/: triangle.vert
VulkanTest/lib/tiny_obj/: CMakeLists.txt
lib/: CMakeLists.txt
lib/stb_image/: CMakeLists.txt
src/GraphicsAbstractionLayer/: CMakeLists.txt  GraphicsAbstractionLayer.cpp  GraphicsAbstractionLayer.h  VertexBuilders.cpp  VertexBuilders.h  WdBuffer.h  WdCommandList.h  WdCommon.h  WdImage.h  WdLayer.cpp  WdLayer.h  WdPipeline.cpp  WdPipeline.h  WdRenderPass.h  WdShader.h
src/GraphicsLayers/: VulkanCommandList.cpp  VulkanCommandList.h  VulkanLayer.cpp  VulkanLayer.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h
src/GraphicsLayers/DebugLayer/: CMakeLists.txt  DebugCommandList.cpp  DebugCommandList.h  DebugLayer.cpp  DebugLayer.h  DebugPipeline.h  DebugRenderPass.h
src/GraphicsLayers/VulkanLayer/: VulkanCommandList.cpp  VulkanCommandList.h  VulkanLayer.cpp  VulkanLayer.h  VulkanPipeline.cpp  VulkanRenderPass.cpp  VulkanShader.cpp  VulkanShader.h
src/Rendering/: DeferredRenderer.cpp  DeferredRenderer.h  Renderer.h
src/Rendering/RenderGraph/: CMakeLists.txt  RenderGraph.cpp  RenderGraph.h  RenderGraphShaderTypes.h
src/Shader/: Shader.h
src/Utils/: MainClonePtr.cpp  MainClonePtr.h
src/Utils/Containers/: CircularArray.h
src/Utils/DebugLog/: CMakeLists.txt  DebugLog.cpp  DebugLog.h
src/Utils/ECS/: CMakeLists.txt  ECS.cpp  ECS.h
src/Utils/FiberSystem/: CMakeLists.txt  FiberSystem.cpp  FiberSystem.h
src/Utils/PlatformAbstractionLayer/: Atomics.h  Fiber.h  FileSys.h  Semaphore.h  System.h  Thread.h
src/Utils/PlatformAbstractionLayer/Windows/: Atomics.cpp  CMakeLists.txt  Fiber.cpp  FileSys.cpp  Semaphore.cpp  System.cpp  Thread.cpp
src/Utils/Queue/: ArrayQueue.h  LinkedListQueue.h  LockFreeFIFO.h  Queue.h  WorkStealingQueue.h
src/Utils/TaskSystem/: CMakeLists.txt  TaskSystem.cpp  TaskSystem.h
src/Utils/WdMalloc/: CMakeLists.txt  WdMalloc.cpp  WdMalloc.h
test/Rendering/RenderGraph/: CMakeLists.txt  RenderGraphTest.h  RenderGraphTests.cpp
test/Utils/Containers/: CMakeLists.txt  CircularArrayTest.cpp
test/Utils/DebugLog/: CMakeLists.txt  DebugLogTest.cpp
test/Utils/ECS/: CMakeLists.txt  ECSTests.cpp
test/Utils/FiberSystem/: CMakeLists.txt  FiberTest.cpp
test/Utils/JobSystem/: CMakeLists.txt  main.cpp  plot.py
test/Utils/Queue/: CMakeLists.txt  QueueTests.cpp
test/Utils/WdMalloc/: CMakeLists.txt  WdMallocTests.cpp
test/Utils/WorkStealingQueue/: CMakeLists.txt  WSQueueTest.cpp
